Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-17738

[regression, bisected] 780b4d84205f16c46f6c5e85e6c1925beb4e4dba breaks all QComboBox instances on OSX

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.7.4
    • 4.7.2
    • None
    • OSX 10.6 (Snow Leopard), Cocoa (PPC/Intel/32/64 fat build)
      Qt 4.7-stable from some days ago.
    • macOS
    • 2e0b5644e17f22ef3fc24ce4c762449149b24af6

      Attached test program shows the problem on OSX (the style isn't needed, I think):
      When opening the popup, or latest when selecting an entry and closing the popup, there is no text visible anymore.

      Reverting 780b4d84205f16c46f6c5e85e6c1925beb4e4dba fixes the problem.

      I'll attach a screenshot when I next have access to the OSX box.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            richard Richard Moe Gustavsen
            mmutz Marc Mutz
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes